test/parsing/ferguson/reserved-this.chpl
var this = 0;

proc f(this) {
}

class this {
  var this =0;
}

type this = string;

proc this() {
}

proc test() {
  try {
  } catch this {
  }
}
